<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Save Location Shortcut -->
    <shortcut
        android:shortcutId="save_location"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:shortcutShortLabel="@string/shortcut_save_location"
        android:shortcutLongLabel="@string/shortcut_save_location_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.barakah.app"
            android:targetClass="com.barakah.app.MainActivity"
            android:data="barakah://save-location" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Dollar Rate Shortcut -->
    <shortcut
        android:shortcutId="dollar_rate"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:shortcutShortLabel="@string/shortcut_dollar_rate"
        android:shortcutLongLabel="@string/shortcut_dollar_rate_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.barakah.app"
            android:targetClass="com.barakah.app.MainActivity"
            android:data="barakah://dollar-rate" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Prayer Times Shortcut -->
    <shortcut
        android:shortcutId="prayer_times"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_today"
        android:shortcutShortLabel="@string/shortcut_prayer_times"
        android:shortcutLongLabel="@string/shortcut_prayer_times_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.barakah.app"
            android:targetClass="com.barakah.app.MainActivity"
            android:data="barakah://prayer-times" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Saved Locations Shortcut -->
    <shortcut
        android:shortcutId="saved_locations"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_directions"
        android:shortcutShortLabel="@string/shortcut_saved_locations"
        android:shortcutLongLabel="@string/shortcut_saved_locations_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.barakah.app"
            android:targetClass="com.barakah.app.MainActivity"
            android:data="barakah://saved-locations" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
